// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`overview-header Adds Contact Us button renders as expected 1`] = `
<div
  className="dr-ui--overview-header prose mb24 pr60-mxl undefined border-b border--gray-light"
>
  <div
    className="flex flex--center-cross"
  >
    <div
      className="flex-child-grow"
    >
      <h1
        className="mb6 txt-fancy"
      >
        Mapbox SDK for Breakfast
      </h1>
      <p>
        <span
          className="mr6"
        >
          Current version: 
          <code>
            v
            0.1.0
          </code>
        </span>
        <a
          className="unprose link txt-underline"
          href="https://keepachangelog.com/en/0.3.0/"
        >
          View changelog
        </a>
      </p>
      <ul
        className="unprose mb18"
      >
        <li
          className="flex"
        >
          <div
            className="flex-child-no-shrink mr6 color-gray"
          >
            <svg
              aria-hidden="true"
              className="events-none icon inline-block align-t"
              data-testid="icon-check"
              focusable="false"
              style={
                Object {
                  "height": 18,
                  "width": 18,
                }
              }
            >
              <use
                xlinkHref="#icon-check"
                xmlnsXlink="http://www.w3.org/1999/xlink"
              />
            </svg>
            <span
              style={
                Object {
                  "border": 0,
                  "clip": "rect(0, 0, 0, 0)",
                  "height": 1,
                  "margin": -1,
                  "overflow": "hidden",
                  "padding": 0,
                  "position": "absolute",
                  "whiteSpace": "nowrap",
                  "width": 1,
                  "wordWrap": "normal",
                }
              }
            >
              check
            </span>
          </div>
          <div
            className="flex-child-grow"
          >
            Smooth scrambled eggs
          </div>
        </li>
        <li
          className="flex"
        >
          <div
            className="flex-child-no-shrink mr6 color-gray"
          >
            <svg
              aria-hidden="true"
              className="events-none icon inline-block align-t"
              data-testid="icon-check"
              focusable="false"
              style={
                Object {
                  "height": 18,
                  "width": 18,
                }
              }
            >
              <use
                xlinkHref="#icon-check"
                xmlnsXlink="http://www.w3.org/1999/xlink"
              />
            </svg>
            <span
              style={
                Object {
                  "border": 0,
                  "clip": "rect(0, 0, 0, 0)",
                  "height": 1,
                  "margin": -1,
                  "overflow": "hidden",
                  "padding": 0,
                  "position": "absolute",
                  "whiteSpace": "nowrap",
                  "width": 1,
                  "wordWrap": "normal",
                }
              }
            >
              check
            </span>
          </div>
          <div
            className="flex-child-grow"
          >
            Vegetarian sausage
          </div>
        </li>
        <li
          className="flex"
        >
          <div
            className="flex-child-no-shrink mr6 color-gray"
          >
            <svg
              aria-hidden="true"
              className="events-none icon inline-block align-t"
              data-testid="icon-check"
              focusable="false"
              style={
                Object {
                  "height": 18,
                  "width": 18,
                }
              }
            >
              <use
                xlinkHref="#icon-check"
                xmlnsXlink="http://www.w3.org/1999/xlink"
              />
            </svg>
            <span
              style={
                Object {
                  "border": 0,
                  "clip": "rect(0, 0, 0, 0)",
                  "height": 1,
                  "margin": -1,
                  "overflow": "hidden",
                  "padding": 0,
                  "position": "absolute",
                  "whiteSpace": "nowrap",
                  "width": 1,
                  "wordWrap": "normal",
                }
              }
            >
              check
            </span>
          </div>
          <div
            className="flex-child-grow"
          >
            Fruit syrups
          </div>
        </li>
      </ul>
      <div
        className="mb24 flex-mm flex--center-cross"
      >
        <a
          className="btn round unprose mr12 mb3 btn--blue"
          href="https://www.mapbox.com/contact/"
        >
          Contact us
        </a>
      </div>
    </div>
    <div
      className="flex-child-ml flex-child-no-shrink w300-mxl align-r"
    >
      <div
        className="none block-mxl"
      >
        <img
          alt=""
          src="https://farm2.staticflickr.com/1790/29050447978_41e671dcd5_o.jpg"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`overview-header All, plus Contact Us button renders as expected 1`] = `
<div
  className="dr-ui--overview-header prose mb24 pr60-mxl undefined border-b border--gray-light"
>
  <div
    className="flex flex--center-cross"
  >
    <div
      className="flex-child-grow"
    >
      <h1
        className="mb6 txt-fancy"
      >
        Mapbox SDK for Breakfast
      </h1>
      <p>
        <span
          className="mr6"
        >
          Current version: 
          <code>
            v
            0.1.0
          </code>
        </span>
        <a
          className="unprose link txt-underline"
          href="https://keepachangelog.com/en/0.3.0/"
        >
          View changelog
        </a>
      </p>
      <ul
        className="unprose mb18"
      >
        <li
          className="flex"
        >
          <div
            className="flex-child-no-shrink mr6 color-gray"
          >
            <svg
              aria-hidden="true"
              className="events-none icon inline-block align-t"
              data-testid="icon-check"
              focusable="false"
              style={
                Object {
                  "height": 18,
                  "width": 18,
                }
              }
            >
              <use
                xlinkHref="#icon-check"
                xmlnsXlink="http://www.w3.org/1999/xlink"
              />
            </svg>
            <span
              style={
                Object {
                  "border": 0,
                  "clip": "rect(0, 0, 0, 0)",
                  "height": 1,
                  "margin": -1,
                  "overflow": "hidden",
                  "padding": 0,
                  "position": "absolute",
                  "whiteSpace": "nowrap",
                  "width": 1,
                  "wordWrap": "normal",
                }
              }
            >
              check
            </span>
          </div>
          <div
            className="flex-child-grow"
          >
            Smooth scrambled eggs
          </div>
        </li>
        <li
          className="flex"
        >
          <div
            className="flex-child-no-shrink mr6 color-gray"
          >
            <svg
              aria-hidden="true"
              className="events-none icon inline-block align-t"
              data-testid="icon-check"
              focusable="false"
              style={
                Object {
                  "height": 18,
                  "width": 18,
                }
              }
            >
              <use
                xlinkHref="#icon-check"
                xmlnsXlink="http://www.w3.org/1999/xlink"
              />
            </svg>
            <span
              style={
                Object {
                  "border": 0,
                  "clip": "rect(0, 0, 0, 0)",
                  "height": 1,
                  "margin": -1,
                  "overflow": "hidden",
                  "padding": 0,
                  "position": "absolute",
                  "whiteSpace": "nowrap",
                  "width": 1,
                  "wordWrap": "normal",
                }
              }
            >
              check
            </span>
          </div>
          <div
            className="flex-child-grow"
          >
            Vegetarian sausage
          </div>
        </li>
        <li
          className="flex"
        >
          <div
            className="flex-child-no-shrink mr6 color-gray"
          >
            <svg
              aria-hidden="true"
              className="events-none icon inline-block align-t"
              data-testid="icon-check"
              focusable="false"
              style={
                Object {
                  "height": 18,
                  "width": 18,
                }
              }
            >
              <use
                xlinkHref="#icon-check"
                xmlnsXlink="http://www.w3.org/1999/xlink"
              />
            </svg>
            <span
              style={
                Object {
                  "border": 0,
                  "clip": "rect(0, 0, 0, 0)",
                  "height": 1,
                  "margin": -1,
                  "overflow": "hidden",
                  "padding": 0,
                  "position": "absolute",
                  "whiteSpace": "nowrap",
                  "width": 1,
                  "wordWrap": "normal",
                }
              }
            >
              check
            </span>
          </div>
          <div
            className="flex-child-grow"
          >
            Fruit syrups
          </div>
        </li>
      </ul>
      <div
        className="mb24 flex-mm flex--center-cross"
      >
        <a
          className="btn round unprose mr12 mb3 btn--blue"
          href="https://www.mapbox.com/install"
        >
          Install
        </a>
        <a
          className="btn round unprose mr12 mb3 btn--blue"
          href="https://www.mapbox.com/contact/"
        >
          Contact us
        </a>
        <a
          className="block unprose link"
          href="https://github.com/mapbox"
        >
          <span
            className="inline-flex flex--center-cross"
          >
            <span
              className="mr6"
            >
              <svg
                aria-hidden="true"
                className="events-none icon"
                data-testid="icon-github"
                focusable="false"
                style={
                  Object {
                    "height": 18,
                    "width": 18,
                  }
                }
              >
                <use
                  xlinkHref="#icon-github"
                  xmlnsXlink="http://www.w3.org/1999/xlink"
                />
              </svg>
              <span
                style={
                  Object {
                    "border": 0,
                    "clip": "rect(0, 0, 0, 0)",
                    "height": 1,
                    "margin": -1,
                    "overflow": "hidden",
                    "padding": 0,
                    "position": "absolute",
                    "whiteSpace": "nowrap",
                    "width": 1,
                    "wordWrap": "normal",
                  }
                }
              >
                github
              </span>
            </span>
            <span>
              Contribute on GitHub
            </span>
          </span>
        </a>
      </div>
    </div>
    <div
      className="flex-child-ml flex-child-no-shrink w300-mxl align-r"
    >
      <div
        className="none block-mxl"
      >
        <img
          alt=""
          src="https://farm2.staticflickr.com/1790/29050447978_41e671dcd5_o.jpg"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`overview-header Basic renders as expected 1`] = `
<div
  className="dr-ui--overview-header prose mb24 pr60-mxl undefined border-b border--gray-light"
>
  <div
    className="flex flex--center-cross"
  >
    <div
      className="flex-child-grow"
    >
      <h1
        className="mb6 txt-fancy"
      >
        Mapbox SDK for Breakfast
      </h1>
      <p>
        <span
          className="mr6"
        >
          Current version: 
          <code>
            v
            0.1.0
          </code>
        </span>
        <a
          className="unprose link txt-underline"
          href="https://keepachangelog.com/en/0.3.0/"
        >
          View changelog
        </a>
      </p>
      <ul
        className="unprose mb18"
      >
        <li
          className="flex"
        >
          <div
            className="flex-child-no-shrink mr6 color-gray"
          >
            <svg
              aria-hidden="true"
              className="events-none icon inline-block align-t"
              data-testid="icon-check"
              focusable="false"
              style={
                Object {
                  "height": 18,
                  "width": 18,
                }
              }
            >
              <use
                xlinkHref="#icon-check"
                xmlnsXlink="http://www.w3.org/1999/xlink"
              />
            </svg>
            <span
              style={
                Object {
                  "border": 0,
                  "clip": "rect(0, 0, 0, 0)",
                  "height": 1,
                  "margin": -1,
                  "overflow": "hidden",
                  "padding": 0,
                  "position": "absolute",
                  "whiteSpace": "nowrap",
                  "width": 1,
                  "wordWrap": "normal",
                }
              }
            >
              check
            </span>
          </div>
          <div
            className="flex-child-grow"
          >
            Smooth scrambled eggs
          </div>
        </li>
        <li
          className="flex"
        >
          <div
            className="flex-child-no-shrink mr6 color-gray"
          >
            <svg
              aria-hidden="true"
              className="events-none icon inline-block align-t"
              data-testid="icon-check"
              focusable="false"
              style={
                Object {
                  "height": 18,
                  "width": 18,
                }
              }
            >
              <use
                xlinkHref="#icon-check"
                xmlnsXlink="http://www.w3.org/1999/xlink"
              />
            </svg>
            <span
              style={
                Object {
                  "border": 0,
                  "clip": "rect(0, 0, 0, 0)",
                  "height": 1,
                  "margin": -1,
                  "overflow": "hidden",
                  "padding": 0,
                  "position": "absolute",
                  "whiteSpace": "nowrap",
                  "width": 1,
                  "wordWrap": "normal",
                }
              }
            >
              check
            </span>
          </div>
          <div
            className="flex-child-grow"
          >
            Vegetarian sausage
          </div>
        </li>
        <li
          className="flex"
        >
          <div
            className="flex-child-no-shrink mr6 color-gray"
          >
            <svg
              aria-hidden="true"
              className="events-none icon inline-block align-t"
              data-testid="icon-check"
              focusable="false"
              style={
                Object {
                  "height": 18,
                  "width": 18,
                }
              }
            >
              <use
                xlinkHref="#icon-check"
                xmlnsXlink="http://www.w3.org/1999/xlink"
              />
            </svg>
            <span
              style={
                Object {
                  "border": 0,
                  "clip": "rect(0, 0, 0, 0)",
                  "height": 1,
                  "margin": -1,
                  "overflow": "hidden",
                  "padding": 0,
                  "position": "absolute",
                  "whiteSpace": "nowrap",
                  "width": 1,
                  "wordWrap": "normal",
                }
              }
            >
              check
            </span>
          </div>
          <div
            className="flex-child-grow"
          >
            Fruit syrups
          </div>
        </li>
      </ul>
      <div
        className="mb24 flex-mm flex--center-cross"
      >
        <a
          className="btn round unprose mr12 mb3 btn--blue"
          href="https://www.mapbox.com/install"
        >
          Install
        </a>
        <a
          className="block unprose link"
          href="https://github.com/mapbox"
        >
          <span
            className="inline-flex flex--center-cross"
          >
            <span
              className="mr6"
            >
              <svg
                aria-hidden="true"
                className="events-none icon"
                data-testid="icon-github"
                focusable="false"
                style={
                  Object {
                    "height": 18,
                    "width": 18,
                  }
                }
              >
                <use
                  xlinkHref="#icon-github"
                  xmlnsXlink="http://www.w3.org/1999/xlink"
                />
              </svg>
              <span
                style={
                  Object {
                    "border": 0,
                    "clip": "rect(0, 0, 0, 0)",
                    "height": 1,
                    "margin": -1,
                    "overflow": "hidden",
                    "padding": 0,
                    "position": "absolute",
                    "whiteSpace": "nowrap",
                    "width": 1,
                    "wordWrap": "normal",
                  }
                }
              >
                github
              </span>
            </span>
            <span>
              Contribute on GitHub
            </span>
          </span>
        </a>
      </div>
    </div>
    <div
      className="flex-child-ml flex-child-no-shrink w300-mxl align-r"
    >
      <div
        className="none block-mxl"
      >
        <img
          alt=""
          src="https://farm2.staticflickr.com/1790/29050447978_41e671dcd5_o.jpg"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`overview-header Beta product renders as expected 1`] = `
<div
  className="dr-ui--overview-header prose mb24 pr60-mxl undefined border-b border--gray-light"
>
  <div
    className="flex flex--center-cross"
  >
    <div
      className="flex-child-grow"
    >
      <h1
        className="mb6 txt-fancy"
      >
        Mapbox Potato SDK
        <span
          className="ml12 inline-block relative"
          style={
            Object {
              "top": "-7px",
            }
          }
        >
          <div
            className="txt-bold round inline-block cursor-default bg-blue-faint color-blue-dark border--blue-dark txt-s border px6"
            data-state="closed"
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onPointerDown={[Function]}
            onPointerLeave={[Function]}
            onPointerMove={[Function]}
            style={Object {}}
          >
            Beta
          </div>
        </span>
      </h1>
      <ul
        className="unprose mb18"
      >
        <li
          className="flex"
        >
          <div
            className="flex-child-no-shrink mr6 color-gray"
          >
            <svg
              aria-hidden="true"
              className="events-none icon inline-block align-t"
              data-testid="icon-check"
              focusable="false"
              style={
                Object {
                  "height": 18,
                  "width": 18,
                }
              }
            >
              <use
                xlinkHref="#icon-check"
                xmlnsXlink="http://www.w3.org/1999/xlink"
              />
            </svg>
            <span
              style={
                Object {
                  "border": 0,
                  "clip": "rect(0, 0, 0, 0)",
                  "height": 1,
                  "margin": -1,
                  "overflow": "hidden",
                  "padding": 0,
                  "position": "absolute",
                  "whiteSpace": "nowrap",
                  "width": 1,
                  "wordWrap": "normal",
                }
              }
            >
              check
            </span>
          </div>
          <div
            className="flex-child-grow"
          >
            Chips
          </div>
        </li>
        <li
          className="flex"
        >
          <div
            className="flex-child-no-shrink mr6 color-gray"
          >
            <svg
              aria-hidden="true"
              className="events-none icon inline-block align-t"
              data-testid="icon-check"
              focusable="false"
              style={
                Object {
                  "height": 18,
                  "width": 18,
                }
              }
            >
              <use
                xlinkHref="#icon-check"
                xmlnsXlink="http://www.w3.org/1999/xlink"
              />
            </svg>
            <span
              style={
                Object {
                  "border": 0,
                  "clip": "rect(0, 0, 0, 0)",
                  "height": 1,
                  "margin": -1,
                  "overflow": "hidden",
                  "padding": 0,
                  "position": "absolute",
                  "whiteSpace": "nowrap",
                  "width": 1,
                  "wordWrap": "normal",
                }
              }
            >
              check
            </span>
          </div>
          <div
            className="flex-child-grow"
          >
            Tots
          </div>
        </li>
        <li
          className="flex"
        >
          <div
            className="flex-child-no-shrink mr6 color-gray"
          >
            <svg
              aria-hidden="true"
              className="events-none icon inline-block align-t"
              data-testid="icon-check"
              focusable="false"
              style={
                Object {
                  "height": 18,
                  "width": 18,
                }
              }
            >
              <use
                xlinkHref="#icon-check"
                xmlnsXlink="http://www.w3.org/1999/xlink"
              />
            </svg>
            <span
              style={
                Object {
                  "border": 0,
                  "clip": "rect(0, 0, 0, 0)",
                  "height": 1,
                  "margin": -1,
                  "overflow": "hidden",
                  "padding": 0,
                  "position": "absolute",
                  "whiteSpace": "nowrap",
                  "width": 1,
                  "wordWrap": "normal",
                }
              }
            >
              check
            </span>
          </div>
          <div
            className="flex-child-grow"
          >
            Fries
          </div>
        </li>
      </ul>
    </div>
    <div
      className="flex-child-ml flex-child-no-shrink w300-mxl align-r"
    >
      <div
        className="none block-mxl"
      >
        <img
          alt=""
          src="https://farm2.staticflickr.com/1790/29050447978_41e671dcd5_o.jpg"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`overview-header No optional props renders as expected 1`] = `
<div
  className="dr-ui--overview-header prose mb24 pr60-mxl undefined border-b border--gray-light"
>
  <div
    className="flex flex--center-cross"
  >
    <div
      className="flex-child-grow"
    >
      <h1
        className="mb6 txt-fancy"
      >
        Mapbox SDK that You've Never Heard Of
      </h1>
      <ul
        className="unprose mb18"
      >
        <li
          className="flex"
        >
          <div
            className="flex-child-no-shrink mr6 color-gray"
          >
            <svg
              aria-hidden="true"
              className="events-none icon inline-block align-t"
              data-testid="icon-check"
              focusable="false"
              style={
                Object {
                  "height": 18,
                  "width": 18,
                }
              }
            >
              <use
                xlinkHref="#icon-check"
                xmlnsXlink="http://www.w3.org/1999/xlink"
              />
            </svg>
            <span
              style={
                Object {
                  "border": 0,
                  "clip": "rect(0, 0, 0, 0)",
                  "height": 1,
                  "margin": -1,
                  "overflow": "hidden",
                  "padding": 0,
                  "position": "absolute",
                  "whiteSpace": "nowrap",
                  "width": 1,
                  "wordWrap": "normal",
                }
              }
            >
              check
            </span>
          </div>
          <div
            className="flex-child-grow"
          >
            a
          </div>
        </li>
        <li
          className="flex"
        >
          <div
            className="flex-child-no-shrink mr6 color-gray"
          >
            <svg
              aria-hidden="true"
              className="events-none icon inline-block align-t"
              data-testid="icon-check"
              focusable="false"
              style={
                Object {
                  "height": 18,
                  "width": 18,
                }
              }
            >
              <use
                xlinkHref="#icon-check"
                xmlnsXlink="http://www.w3.org/1999/xlink"
              />
            </svg>
            <span
              style={
                Object {
                  "border": 0,
                  "clip": "rect(0, 0, 0, 0)",
                  "height": 1,
                  "margin": -1,
                  "overflow": "hidden",
                  "padding": 0,
                  "position": "absolute",
                  "whiteSpace": "nowrap",
                  "width": 1,
                  "wordWrap": "normal",
                }
              }
            >
              check
            </span>
          </div>
          <div
            className="flex-child-grow"
          >
            b
          </div>
        </li>
        <li
          className="flex"
        >
          <div
            className="flex-child-no-shrink mr6 color-gray"
          >
            <svg
              aria-hidden="true"
              className="events-none icon inline-block align-t"
              data-testid="icon-check"
              focusable="false"
              style={
                Object {
                  "height": 18,
                  "width": 18,
                }
              }
            >
              <use
                xlinkHref="#icon-check"
                xmlnsXlink="http://www.w3.org/1999/xlink"
              />
            </svg>
            <span
              style={
                Object {
                  "border": 0,
                  "clip": "rect(0, 0, 0, 0)",
                  "height": 1,
                  "margin": -1,
                  "overflow": "hidden",
                  "padding": 0,
                  "position": "absolute",
                  "whiteSpace": "nowrap",
                  "width": 1,
                  "wordWrap": "normal",
                }
              }
            >
              check
            </span>
          </div>
          <div
            className="flex-child-grow"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque cursus tristique orci, eget blandit justo. In quis ultrices ante. Mauris et vehicula arcu, et tincidunt mi. Integer eget tristique risus, eu tristique risus. Aliquam vel lectus eu magna finibus malesuada non a felis. Integer tincidunt rutrum urna ac mattis. Phasellus consequat tempus hendrerit.
          </div>
        </li>
        <li
          className="flex"
        >
          <div
            className="flex-child-no-shrink mr6 color-gray"
          >
            <svg
              aria-hidden="true"
              className="events-none icon inline-block align-t"
              data-testid="icon-check"
              focusable="false"
              style={
                Object {
                  "height": 18,
                  "width": 18,
                }
              }
            >
              <use
                xlinkHref="#icon-check"
                xmlnsXlink="http://www.w3.org/1999/xlink"
              />
            </svg>
            <span
              style={
                Object {
                  "border": 0,
                  "clip": "rect(0, 0, 0, 0)",
                  "height": 1,
                  "margin": -1,
                  "overflow": "hidden",
                  "padding": 0,
                  "position": "absolute",
                  "whiteSpace": "nowrap",
                  "width": 1,
                  "wordWrap": "normal",
                }
              }
            >
              check
            </span>
          </div>
          <div
            className="flex-child-grow"
          >
            c
          </div>
        </li>
        <li
          className="flex"
        >
          <div
            className="flex-child-no-shrink mr6 color-gray"
          >
            <svg
              aria-hidden="true"
              className="events-none icon inline-block align-t"
              data-testid="icon-check"
              focusable="false"
              style={
                Object {
                  "height": 18,
                  "width": 18,
                }
              }
            >
              <use
                xlinkHref="#icon-check"
                xmlnsXlink="http://www.w3.org/1999/xlink"
              />
            </svg>
            <span
              style={
                Object {
                  "border": 0,
                  "clip": "rect(0, 0, 0, 0)",
                  "height": 1,
                  "margin": -1,
                  "overflow": "hidden",
                  "padding": 0,
                  "position": "absolute",
                  "whiteSpace": "nowrap",
                  "width": 1,
                  "wordWrap": "normal",
                }
              }
            >
              check
            </span>
          </div>
          <div
            className="flex-child-grow"
          >
            d
          </div>
        </li>
      </ul>
    </div>
    <div
      className="flex-child-ml flex-child-no-shrink w300-mxl align-r"
    >
      <div
        className="none block-mxl"
      >
        <img
          alt=""
          src="https://farm2.staticflickr.com/1790/29050447978_41e671dcd5_o.jpg"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`overview-header Some optional props renders as expected 1`] = `
<div
  className="dr-ui--overview-header prose mb24 pr60-mxl undefined border-b border--gray-light"
>
  <div
    className="flex flex--center-cross"
  >
    <div
      className="flex-child-grow"
    >
      <h1
        className="mb6 txt-fancy"
      >
        Mapbox SDK for Breakfast
      </h1>
      <p>
        <span
          className="mr6"
        >
          Current version: 
          <code>
            v
            0.1.0
          </code>
        </span>
      </p>
      <ul
        className="unprose mb18"
      >
        <li
          className="flex"
        >
          <div
            className="flex-child-no-shrink mr6 color-gray"
          >
            <svg
              aria-hidden="true"
              className="events-none icon inline-block align-t"
              data-testid="icon-check"
              focusable="false"
              style={
                Object {
                  "height": 18,
                  "width": 18,
                }
              }
            >
              <use
                xlinkHref="#icon-check"
                xmlnsXlink="http://www.w3.org/1999/xlink"
              />
            </svg>
            <span
              style={
                Object {
                  "border": 0,
                  "clip": "rect(0, 0, 0, 0)",
                  "height": 1,
                  "margin": -1,
                  "overflow": "hidden",
                  "padding": 0,
                  "position": "absolute",
                  "whiteSpace": "nowrap",
                  "width": 1,
                  "wordWrap": "normal",
                }
              }
            >
              check
            </span>
          </div>
          <div
            className="flex-child-grow"
          >
            Smooth scrambled eggs
          </div>
        </li>
        <li
          className="flex"
        >
          <div
            className="flex-child-no-shrink mr6 color-gray"
          >
            <svg
              aria-hidden="true"
              className="events-none icon inline-block align-t"
              data-testid="icon-check"
              focusable="false"
              style={
                Object {
                  "height": 18,
                  "width": 18,
                }
              }
            >
              <use
                xlinkHref="#icon-check"
                xmlnsXlink="http://www.w3.org/1999/xlink"
              />
            </svg>
            <span
              style={
                Object {
                  "border": 0,
                  "clip": "rect(0, 0, 0, 0)",
                  "height": 1,
                  "margin": -1,
                  "overflow": "hidden",
                  "padding": 0,
                  "position": "absolute",
                  "whiteSpace": "nowrap",
                  "width": 1,
                  "wordWrap": "normal",
                }
              }
            >
              check
            </span>
          </div>
          <div
            className="flex-child-grow"
          >
            Vegetarian sausage
          </div>
        </li>
        <li
          className="flex"
        >
          <div
            className="flex-child-no-shrink mr6 color-gray"
          >
            <svg
              aria-hidden="true"
              className="events-none icon inline-block align-t"
              data-testid="icon-check"
              focusable="false"
              style={
                Object {
                  "height": 18,
                  "width": 18,
                }
              }
            >
              <use
                xlinkHref="#icon-check"
                xmlnsXlink="http://www.w3.org/1999/xlink"
              />
            </svg>
            <span
              style={
                Object {
                  "border": 0,
                  "clip": "rect(0, 0, 0, 0)",
                  "height": 1,
                  "margin": -1,
                  "overflow": "hidden",
                  "padding": 0,
                  "position": "absolute",
                  "whiteSpace": "nowrap",
                  "width": 1,
                  "wordWrap": "normal",
                }
              }
            >
              check
            </span>
          </div>
          <div
            className="flex-child-grow"
          >
            Fruit syrups
          </div>
        </li>
      </ul>
      <div
        className="mb24 flex-mm flex--center-cross"
      >
        <a
          className="block unprose link"
          href="https://github.com/mapbox"
        >
          <span
            className="inline-flex flex--center-cross"
          >
            <span
              className="mr6"
            >
              <svg
                aria-hidden="true"
                className="events-none icon"
                data-testid="icon-github"
                focusable="false"
                style={
                  Object {
                    "height": 18,
                    "width": 18,
                  }
                }
              >
                <use
                  xlinkHref="#icon-github"
                  xmlnsXlink="http://www.w3.org/1999/xlink"
                />
              </svg>
              <span
                style={
                  Object {
                    "border": 0,
                    "clip": "rect(0, 0, 0, 0)",
                    "height": 1,
                    "margin": -1,
                    "overflow": "hidden",
                    "padding": 0,
                    "position": "absolute",
                    "whiteSpace": "nowrap",
                    "width": 1,
                    "wordWrap": "normal",
                  }
                }
              >
                github
              </span>
            </span>
            <span>
              Contribute on GitHub
            </span>
          </span>
        </a>
      </div>
    </div>
    <div
      className="flex-child-ml flex-child-no-shrink w300-mxl align-r"
    >
      <div
        className="none block-mxl"
      >
        <img
          alt=""
          src="https://farm2.staticflickr.com/1790/29050447978_41e671dcd5_o.jpg"
        />
      </div>
    </div>
  </div>
</div>
`;
